Fix matcher to work when you have only 1 drop, dB or bolt of Heavy Rains magic. Increase spacing of the three stats in CSS.

--- a/relay/chit.css
+++ b/relay/chit.css
@@ -288,7 +288,7 @@ tr.florist :first-line {
 .chit_stormy div span, .chit_stormy div img {
 	float:left;
 	vertical-align:middle;
-	padding-left:6px;
+	padding-left:8px;
 }
 .chit_stormy div img {
 	max-width:14px;
